# Snake

./: CMakeLists.txt  Readme.md  SnakeConfig.h.in  a.out  main.cpp
include/: Game.h  define.h  food.h  plat.h  snake.h  ui.h  user.h
src/: Game.cpp  food.cpp  snake.cpp  ui.cpp  user.cpp
test/: a.out  test.sh  test_food.cpp  test_plat.cpp
